# off-duty-locks

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  railway.web.json
.github/workflows/: ci.yml  extract.yml  live-smoke.yml
docs/: compliance.md  data-contract.md  data-dictionary.md  deployment.md  runbook.md  source-contract.md  verification-report.md
fixtures/: README.md  teams-2026-reference.json
fixtures/adversarial/: added_column.json  changed_header_order.json  duplicate_record.json  duplicate_team.json  empty_response.json  lastn_exceeded.json  makes_exceed_attempts.json  malformed.json  missing_result_set.json  negative_stat.json  null_percentage.json  offseason_empty.json  partial_response.json  pct_wrong_scale.json  reb_mismatch.json  removed_required_column.json  row_width_mismatch.json  short_season.json  stale_upstream.json  string_instead_of_number.json  truncated.json  unknown_team.json  wl_gp_mismatch.json
fixtures/betting/: README.md  an_scoreboard_wnba.json  vsin_circa_wnba.html  vsin_dk_wnba.html
fixtures/expected_teams/: 2026.json
fixtures/sanitized/: commonteamyears_2026.json  (+2 more)
qa/: acceptance-gates.md  gen_adversarial_fixtures.py  verify.py
scripts/: capture_live_contract.py  manifest_summary.py
src/wnba_pipeline/: db.py  (+13 more)
tests/: _builders.py  conftest.py  test_betting_db.py  test_betting_merge.py  test_betting_runner.py  test_betting_scrapers.py  test_db.py  test_derived.py  test_extractor.py  test_http_client.py  test_locking.py  test_publish.py  test_runner.py  test_storage.py  test_validation.py  test_web.py
(+8 files in other folders)
