[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "offdutylocks-wnba-pipeline"
version = "0.1.0"
description = "Automated WNBA traditional team-statistics extraction pipeline (stats.wnba.com, last 7 games)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "responses>=0.25",
]

[project.scripts]
wnba-pipeline = "wnba_pipeline.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
